feat: [KAN-38] update product stock (#7)
