# server/http/router/router.go
@@ -4,7 +4,7 @@ import (
 	"github.com/gin-gonic/gin"
 
 	"github.com/NUS-ISS-Agile-Team/ceramicraft-commodity-mservice/server/http/api"
-	_ "github.com/NUS-ISS-Agile-Team/ceramicraft-user-mservice/server/docs"
+	_ "github.com/NUS-ISS-Agile-Team/ceramicraft-commodity-mservice/server/docs"
 	swaggerFiles "github.com/swaggo/files"
 	gs "github.com/swaggo/gin-swagger"
 )
@@ -22,10 +22,16 @@ func NewRouter() *gin.Engine {
 				"message": "pong",
 			})
 		})
-		v1.POST("/add", api.AddProduct)
-		v1.GET("/product/:id", api.GetProduct)
-		v1.POST("/publish", api.PublishProduct)
-		v1.POST("/unpublish", api.UnpublishProduct)
+
+		merchantRouter := v1.Group("/merchant")
+		{
+			merchantRouter.POST("/add", api.AddProduct)
+			merchantRouter.GET("/product/:id", api.GetProduct)
+			merchantRouter.POST("/publish", api.PublishProduct)
+			merchantRouter.POST("/unpublish", api.UnpublishProduct)
+			merchantRouter.POST("/updateStock", api.UpdateProductStock)
+		}
+
 	}
 	return r
 }
